# CADFusion

./: .gitignore  README.md  ds_config.yaml  pyproject.toml
data/sl_data/: convert.py  test.json  val.json
scripts/: alternate_VF.sh  alternate_VF_quadra_gpu.sh  custom_train.sh  fast_inference.sh  generate_samples.sh  make_dpo_data.sh  preprocess_skexgen.sh  train_loop.sh  train_with_shuffling.sh
src/data_preprocessing/: call_openai.py  captioning.py  convert.py
src/dpo/: llava_utils.py  make_dpo_dataset.py  openai_utils.py
src/rendering_utils/: img_renderer.py  parser.py  parser_visual.py  ptl_sampler.py
src/rendering_utils/utils/: obj_reconverter.py  util.py
src/test/: VLM_score.py  chamfer_dist.py  chamfer_eval.py  dist_eval.py  f1_eval.py  generate.ipynb  inference.py
src/train/: CAD_dataset.py  dpo.py  llama_finetune.py  utils.py
